Fixed z-index

--- a/material-components-web.css
+++ b/material-components-web.css
@@ -7177,7 +7177,7 @@ a.mdc-list-item {
   opacity: 0;
   overflow: auto;
   will-change: transform, opacity;
-  z-index: 8;
+  z-index: 199999;
   transition: opacity 0.03s linear, -webkit-transform 0.12s cubic-bezier(0, 0, 0.2, 1);
   transition: opacity 0.03s linear, transform 0.12s cubic-bezier(0, 0, 0.2, 1);
   transition: opacity 0.03s linear, transform 0.12s cubic-bezier(0, 0, 0.2, 1), -webkit-transform 0.12s cubic-bezier(0, 0, 0.2, 1);
